2008-05-16  Philip Van Hoof <pvanhoof@gnome.org>

	* Fixed size reporting in POP, regression fix it seems

2008-05-14  Jose Dapena Paz  <jdapena@igalia.com>

	* Use GOnce registering all types in tinymail to make
	registering thread-safe.

2008-05-14  Philip Van Hoof <pvanhoof@gnome.org>

	* libtinymail-camel/tny-camel-queue.c: Letting the thread wait for
	more items instead of exiting

2008-05-13  Rob Taylor  <rob.taylor@codethink.co.uk>

	* libtinymail-camel/tny-camel-bs-mime-part.c:
	(tny_camel_bs_mime_part_is_attachment_default): Modify the
	is_attachment heuristic in TnyCamelBSMimePart so that inline mime
	parts with filenames are considered attachments.

2008-05-12  Rob Taylor  <rob.taylor@codethink.co.uk>

	* configure.ac: Add --with-platform option 'none'.
	* bindings/python/Makefile.am: Fix up python bindings to work when built with no platform.
	* bindings/dotnet/Makefile.am: Don't build platform subdir if platform is none.
	* tests/vala-demo/Makefile.am: Fix up vala demo to use PLATFORM_LIBS for consistency.

2008-05-12  Rob Taylor  <rob.taylor@codethink.co.uk>

	* libtinymail/tny-error.c: Fix documentation

2008-05-12  Rob Taylor  <rob.taylor@codethink.co.uk>

	* m4/ticonv.m4: Add --with-iconv-detect-h option to allow the passing
	of a pre-generated iconv-detect.h rather than generating it at
	configure time.

2008-05-12  Rob Taylor  <rob.taylor@codethink.co.uk>

	* libtinymail-camel/tny-camel-bs-msg-receive-strategy.c:
	* libtinymail-camel/tny-camel-folder.c:
	* libtinymail-camel/tny-camel-nntp-folder.c:
	* libtinymail-camel/tny-camel-mime-part.c:
	* libtinymail-camel/tny-camel-send-queue.c:
	* libtinymail-camel/tny-camel-pop-store-account.c:
	* libtinymail-camel/tny-camel-pop-folder.c:
	* libtinymail-camel/tny-camel-common.c:
	* libtinymail-camel/tny-camel-nntp-store-account.c:
	* libtinymail-camel/tny-camel-store-account.c:
	* libtinymail-camel/tny-camel-transport-account.c:
	* libtinymail-camel/tny-camel-account.c:
	* libtinymail/tny-error.c: