@@ -72,7 +72,8 @@ typedef enum {
 	TNY_CAMEL_QUEUE_PRIORITY_ITEM = 1<<3,
 	TNY_CAMEL_QUEUE_GET_HEADERS_ITEM = 1<<4,
 	TNY_CAMEL_QUEUE_SYNC_ITEM = 1<<5, 
-	TNY_CAMEL_QUEUE_REFRESH_ITEM = 1<<6
+	TNY_CAMEL_QUEUE_REFRESH_ITEM = 1<<6,
+	TNY_CAMEL_QUEUE_AUTO_CANCELLABLE_ITEM = 1<<7,
 } TnyCamelQueueItemFlags;
 
 GType tny_camel_queue_get_type (void);
