@@ -1,3 +1,8 @@
+2008-05-20  Philip Van Hoof <pvanhoof@gnome.org>
+
+	* Differentiate between auto-cancellable and normally cancellable
+	items in TnyCamelQueue
+
 2008-05-16  Philip Van Hoof <pvanhoof@gnome.org>
 
 	* Fixed size reporting in POP, regression fix it seems
